// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`registerCodegen should register codegen 1`] = `
[
  {
    "code": "<Test />",
    "language": "TYPESCRIPT",
    "title": "Usage",
  },
  {
    "code": "<Box boxSize="100%" />",
    "language": "TYPESCRIPT",
    "title": "Test",
  },
]
`;

exports[`registerCodegen should register codegen 2`] = `
[
  {
    "code": "<Box boxSize="100%" />",
    "language": "TYPESCRIPT",
    "title": "Main",
  },
]
`;

exports[`registerCodegen should register codegen 3`] = `[]`;

exports[`registerCodegen should generate responsive code when root node is SECTION 1`] = `
[
  {
    "code": 
"<Box boxSize="100%">
  <Box boxSize="100%" />
  <Box boxSize="100%" />
</Box>"
,
    "language": "TYPESCRIPT",
    "title": "ResponsiveSection",
  },
  {
    "code": 
"import { Box } from '@devup-ui/react'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}"
,
    "language": "TYPESCRIPT",
    "title": "ResponsiveSection - Responsive",
  },
  {
    "code": 
"mkdir -p src/components

echo 'import { Box } from \\'@devup-ui/react\\'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}' > src/components/ResponsiveSection.tsx"
,
    "language": "BASH",
    "title": "ResponsiveSection - Responsive CLI (Bash)",
  },
  {
    "code": 
"New-Item -ItemType Directory -Force -Path src\\components | Out-Null

@'
import { Box } from '@devup-ui/react'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}
'@ | Out-File -FilePath src\\components\\ResponsiveSection.tsx -Encoding UTF8"
,
    "language": "BASH",
    "title": "ResponsiveSection - Responsive CLI (PowerShell)",
  },
]
`;
